--- a/views/closeout.html
+++ b/views/closeout.html
@@ -42,8 +42,8 @@
             <div class="title">Results</div>
             <div class="body">
               <ul>
-                <li>Ontel has less than a 5% rejection rate for 2014-2016 on over 1500+ site projects, this includes rejections due to undocumented requirements </li>
-                <li>We close out over 90% of our sites within 24 calendar hours of receiving raw files, this includes clients that do not use Swift Projects for photo management</li>
+                <li>Ontel has less than a 3% rejection rate for 2014-2016 on over 1500+ site-projects</li>
+                <li>We've been growing for 3 years on the strength of our cost reduction (over 50% in some cases), and quality</li>
               </ul>
             </div>
           </div>
@@ -69,8 +69,8 @@
             <div class="title">Setup the Systems</div>
             <div class="body">
               <ul>
-                <li>An environment with your goals, requirements, and processes is then set up in Swift Projects</li>
-                <li>Depending on your deliverables, we may then start creating custom software applications to automate the processing and validation of key data deliverables like RETS and test results</li>
+                <li>An environment with your goals, requirements, and processes is then set up in Swift Projects by us</li>
+                <li>Depending on your deliverables, we may then start creating custom software applications to automate the processing and validation of key data deliverables like RETS and test results etc.</li>
               </ul>
             </div>
           </div>
@@ -78,10 +78,11 @@
             <div class="title">Execute the Plan</div>
             <div class="body">
               <ul>
-                <li>We receive site information and scheduling and ensure any SOW specific items are identified in Swift Projects</li>
-                <li>We receive and review your raw files and advise on their accuracy and completeness</li>
+                <li>We receive site information and scheduling in Swift and ensure any SOW specific items are identified in the tasks</li>
+				<li>We review site information for discrepancies for items like RF-related requirements for example</li>
+                <li>We receive and review your raw files in Swift and advise on their accuracy and completeness</li>
                 <li>We compile and validate C.O.P., complete necessary documents, and upload to client portal</li>
-                <li>If rejections occur, we document them and incorporate into Swift Projects to prevent them from occuring in the future</li>
+                <li>When rejections occur, we document them and incorporate into Swift Projects to prevent them from occuring in the future</li>
               </ul>
             </div>
           </div>
@@ -89,9 +90,9 @@
             <div class="title">Optimize Performance</div>
             <div class="body">
               <ul>
-                <li>We analyze performance by looking at key metrics such as how long it takes to receive raw data from the field, time taken to compile, QA, etc</li>
+                <li>We analyze performance by looking at key metrics such as how long it takes to receive raw data from the field, time taken to compile, QA issues, etc</li>
 				<li>We then present our findings and solutions and come up with a plan of action to optimize performance</li>
-				<li>This process is repeated at set intervals based on work volume and project timelines</li>
+				<li>This process is repeated at set intervals based on work volume and rates of KPI failures </li>
               </ul>
             </div>
           </div>
@@ -103,7 +104,7 @@
     <div class="section">
       <div class="heading">Common C.O.P. Deliverables</div>
       <div class="content">
-        <span>We check all deliverables for completeness and accuracy and build systems to structure the process so that high quality is consistently represented throughout high volumes of projects. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document, and advise on common punch item issues and best practices. Included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. Here are main items we manage:</span>
+        <span>Included in this service is our consultation to get scope specific items into the workflow within Swift Projects. Also included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. This list is not exhaustive, however here are main items we manage on your behalf. This management entails the review, reporting, and processing necessary to take raw files from testing equipment, cameras, and other sources to C.O.P acceptance.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
@@ -115,11 +116,11 @@
                 <li>Height Verification form</li>
                 <li>Antenna Alignment Tool form</li>
                 <li>RET Screenshots and worksheet</li>
-				<li>RF design and construction drawing red-lines</li>
-                <li>Certifications for equipment and people</li>
+				<li>RF design and construction drawing annotation</li>
+                <li>Equipment and personnel certifications</li>
                 <li>Jobsite safety documents (JSA/JHA)</li>
                 <li>Log Book entries</li>
-                <li>Site clear confirmations</li>
+                <li>Site "clear" confirmation</li>
                 <li>Material releases and bills of lading</li>
               </ul>
             </div>
@@ -130,7 +131,7 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">Site Virtualization</div>
+      <div class="heading">Site Virtualization and Drone Surveying</div>
       <div class="content">
         <span>
           As part of a close out for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set can provide. This may include a drone audit, photogrammetry, pointclouds etc. We advise and help our clients perform these new types of services, so don't hesitate to ask us how to incorporate this into your portfolio and begin offering them to your clients.
