--- a/views/mgmt.html
+++ b/views/mgmt.html
@@ -15,7 +15,7 @@
     <div class="section">
       <div class="heading">Site Development Services</div>
       <div class="content">
-        <div style="">If you are looking for a unique, and innovative partner to bring something new to the process, then we can be of particular help. Our use of technology is really what stands us apart from others, and while we would like it to automate and solve all the problems inherent with large, ambitious projects, we are happy with it solving enough of them to make our clients leaders, and having great people handle the rest. </div>
+        <div style="">If you are looking for a unique, and innovative partner to bring something new vs. more to the process, then we can be of particular help. Our use of technology is really what stands us apart from traditional resources, for everything that software can't do, we have great people. </div>
         <div class="feature-flex testing-intro-list">
           <div>
             <div class="body">Management throughout design and implementation</div>
