--- a/views/mgmt.html
+++ b/views/mgmt.html
@@ -18,7 +18,7 @@
         <div style="">If you are looking for a unique, and innovative partner to bring something new vs. more to the process, then we can be of particular help. Our use of technology is really what stands us apart from traditional resources, for everything that software can't do, we have great people. </div>
         <div class="feature-flex testing-intro-list">
           <div>
-            <div class="body">Management throughout design and implementation</div>
+            <div class="body">Quality Assurance</div>
           </div>
           <div>
             <div class="body">Site scope and BOM development</div>
