--- a/views/pricing.html
+++ b/views/pricing.html
@@ -12,11 +12,11 @@
             <div class="body">
               <ul>
                 
-                <li><span class="price-emphasis">$99</span> per month for up to 20 managed users and unlimited guests - includes 1TB of data</li>
-				<li><span class="price-emphasis">Free</span> organization setup and orientation for small businesses of 20 users or less</li>
-				<li><span class="price-emphasis">Free</span> Project template design by an experienced telecommunications manager for your first project</li>
+                <li><span class="price-emphasis">$99</span> per month for up to 10 managed users and unlimited guests - includes 1TB of data</li>
+				<li><span class="price-emphasis">Free</span> organization setup and orientation for small businesses of 10 users or less</li>
+				<li><span class="price-emphasis">Free</span> project template design by an experienced telecommunications manager for your first project</li>
 				<li><span class="price-emphasis">Free</span> your 1st month trial of Swift Projects for your team</li>
-				<li><span class="price-emphasis">Free</span> Email, phone, and chat support</li>
+				<li><span class="price-emphasis">Free</span> e-mail, phone, and chat support</li>
 				<li><span class="price-emphasis">Contact Us</span> for quotes on additional users and data</li>
               </ul>
             </div>
