--- a/views/closeout.html
+++ b/views/closeout.html
@@ -104,7 +104,7 @@
     <div class="section">
       <div class="heading">Common C.O.P. Deliverables</div>
       <div class="content">
-        <span>Included in this service is our consultation to get scope specific items into the workflow within Swift Projects. Also included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. This list is not exhaustive, however here are main items we manage on your behalf. This management entails the review, reporting, and processing necessary to take raw files from testing equipment, cameras, and other sources to C.O.P acceptance.</span>
+        <span>Included in this service is our consultation to get scope specific items into the workflow within Swift Projects. Also included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. This list is not exhaustive, however here are the main items we manage on your behalf. This management entails the review, reporting, and processing necessary to take raw files from testing equipment, cameras, and other sources to C.O.P acceptance.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
