--- a/views/swift.html
+++ b/views/swift.html
@@ -11,13 +11,13 @@
   </div>
   <div class="product-container desktop-display">
     <div class="section intro">
-      <div class="heading">Make How You Think Into a System</div>
+      <div class="heading">Close out faster</div>
 		<div class="content">
-			<p>Swift Projects puts the power to design, run, and close wireless projects into the palm of your hand. With a phone or browser, Swift enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively so there's less go-backs, rejections, and time until you get paid.
+			<p>Swift Projects puts the power to close wireless projects on the day of construction completion into the palm of your hand. Our system is all about capturing the details and emphasizing mobility and automation. Simply put, with Swift Projects, your company can move away from manual close out processes and into a near real time, semi-automated environment that helps you complete projects faster, and cheaper, while improving quality.
 			<p>
 		</div>
 		<div class="content">
-			<p>We are so confident that we can close projects better, faster, and cheaper than any other solution, that we are offering a month, and a complimentary consultation on your toughest project for free.
+			<p>Swift Projects is built on Amazon S3 and Google with a modern software stack that glues it all together, ensuring that your data is secure, your team is mobile, and your company is plugged into live updates and priorities. To prove how confident we are that Swift Projects will change your close out game, we are offering a complimentary design service paired with a 1 month free trial that we'd like to offer to help you with your toughest project.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
@@ -115,7 +115,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Integrations</div>
-          <div class="body">With 20+ integrations with services like Box, Dropbox, Google Drive, Gmail, your favorite tools play together</div>
+          <div class="body">With 20+ integrations with services like Excel, Box, Dropbox, Google Drive, Gmail, your favorite tools play together</div>
         </div>
         <div>
           <div class="title">Power Tools</div>
@@ -130,7 +130,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Automate File Management</div>
-          <div class="body">Create smart file requirements that automate the management of every photo, file, and document, while securing and backing up your data</div>
+          <div class="body">Create smart file requirements that automate the management of every photo, file, and document, while securing, sharing, and backing up your data</div>
         </div>
         <div>
           <div class="title">Smarter Lists</div>
@@ -145,7 +145,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Metrics</div>
-          <div class="body">With our instant reports and expanding data sets you can measure, analyze, and improve performance with live information on anything you want to track</div>
+          <div class="body">With our instant reports and expanding data sets, you can measure, analyze, and improve performance with live information on anything you want to track</div>
         </div>
         <div>
           <div class="title">Home Screen</div>
