--- a/views/closeout.html
+++ b/views/closeout.html
@@ -9,7 +9,7 @@
       <div class="heading">Give us your raw site files and we close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process, our specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed without commitment. 
+         No other company focuses as much on the close out process, our specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and provide you access to skilled telecommunication technicians that you can scale up and down with demand as needed without recruiting and ongoing commitment. 
         </p>
         <p>
           Trying our close out management services comes with a simple proposition, that we will bring data, clarity, structure, and ideas that can make you more profitable, and that you can try for free.
@@ -134,7 +134,7 @@
       <div class="heading">Site Virtualization and Drone Surveying</div>
       <div class="content">
         <span>
-          As part of a close out for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set can provide. This may include a drone audit, photogrammetry, pointclouds etc. We advise and help our clients perform these new types of services, so don't hesitate to ask us how to incorporate this into your portfolio and begin offering them to your clients.
+          As part of a close out for various construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set can provide. This may include a drone audit, photogrammetry, pointclouds etc. We advise and help our clients perform these new types of services, so don't hesitate to ask us how to incorporate this into your portfolio and begin offering them to your clients.
         </span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
