Closeout and Swift updates

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -2,17 +2,17 @@
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header closeout">
     <div class="landing-text">close out Management</div>
-	<div class="landing-text-sub">We make closing out almost fun</div>
+	<div class="landing-text-sub">Close out projects better</div>
   </div>
   <div class="product-container">
     <div class="section intro">
       <div class="heading">Give us your raw site files and we close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process, our specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and provide you access to skilled telecommunication technicians that you can scale up and down with demand as needed without recruiting and ongoing commitment. 
+         No other company focuses as much on the close out process, our attention to detail, and specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays off in our clients gaining market share and improving cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and provide you access to skilled telecommunication technicians and managers that you can scale up and down with demand, as needed, without recruiting and ongoing commitment. 
         </p>
         <p>
-          Trying our close out management services comes with a simple proposition, that we will bring data, clarity, structure, and ideas that can make you more profitable, and that you can try for free.
+          Trying our close out management services comes with a simple proposition, that we will bring data, clarity, structure, and technology that can make you more profitable, and that you can try without commitment.
         </p>
       </div>
     </div>
@@ -21,7 +21,7 @@
     <div class="section">
       <div class="heading">Cheaper, Faster, Better, at the same time</div>
       <div class="content">
-        <span>Technology enables us to do what wasn't possible before, and with the convergence of LTE/high-speed networks, and with better than ever hardware at accessible prices, we are witnessing the end of the old adage that you can't have "cheaper, faster, and better" all at once. We are proof of this. Our in-house developed software like Swift Projects, along with other tools and scripts that automate things like Anritsu Sweep processing and validation, ATT's RET forms, or Verizon Wireless' RF Summary in the BAWA/DC market, hit all three factors at the same time. Our people, matched with this exceptional technological capability enables us to provide higher quality services, at higher rates, less expensively than traditional companies can.</span>
+        <span>Technology enables us to do what wasn't possible before, and with the convergence of LTE/high-speed networks, and better than ever hardware at accessible prices, we are witnessing the end of the old adage that you can't have "cheaper, faster, and better" all at once. We are proof of this. Our in-house developed software like Swift Projects, along with other tools and custom scripts cab automate things like Anritsu Sweep processing and validation, ATT's RET forms, or Verizon Wireless' RF Summary in the BAWA/DC market, providing accuracy and speed gains an order of magnitude better than manual processes. Our people, matched with this technological capability enables us to provide our clients with an unbeatable value.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
