--- a/views/swift.html
+++ b/views/swift.html
@@ -1,7 +1,7 @@
 <topnav></topnav>
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header swift">
-    <div class="landing-text">Swift Projects</div>
+    <div class="landing-text">Swift Projects™</div>
     <div class="landing-text-sub">Massively Mobile Management</div>
     <!--<div class="video-container">-->
       <!--<video autoplay loop class="fillWidth" id="ontelbg">-->
@@ -13,11 +13,11 @@
     <div class="section intro">
       <div class="heading">Close out faster</div>
 		<div class="content">
-			<p>Swift Projects puts the power to close wireless projects on the day of construction completion into the palm of your hand. Our system is all about capturing the details and emphasizing mobility and automation. Simply put, with Swift Projects, your company can move away from manual close out processes and into a near real time, semi-automated environment that helps you complete projects faster, and cheaper, while improving quality.
+			<p>Swift Projects puts the power to close wireless construction projects on the day of construction completion into the palm of your hand. Our system is all about capturing the details and emphasizing mobility and automation. Simply put, with Swift Projects, your company can move away from manual close out processes and into a near real time, semi-automated, mobile-first environment that helps you complete projects with accuracy and speed.
 			<p>
 		</div>
 		<div class="content">
-			<p>Swift Projects is built on Amazon S3 and Google with a modern software stack that glues it all together, ensuring that your data is secure, your team is mobile, and your company is plugged into live updates and priorities. To prove how confident we are that Swift Projects will change your close out game, we are offering a complimentary design service paired with a 1 month free trial that we'd like to offer to help you with your toughest project.
+			<p>Swift Projects is built on Amazon S3 and Google services with a modern software stack that glues it all together, ensuring that your data is secure, your team is mobile, and your company is plugged into live updates and priorities. To prove how confident we are that Swift Projects will change your close out game, we are offering a complimentary design service paired with a 1 month free trial that we'd like to offer to help you with your toughest project.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
