--- a/views/swift.html
+++ b/views/swift.html
@@ -2,7 +2,7 @@
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header swift">
     <div class="landing-text">Swift Projects™</div>
-    <div class="landing-text-sub">Massively Mobile Management</div>
+    <div class="landing-text-sub">Close out better</div>
     <!--<div class="video-container">-->
       <!--<video autoplay loop class="fillWidth" id="ontelbg">-->
         <!--<source src="https://s3.amazonaws.com/bcm-static/static/encoded/r2-1080p/winter_one.mp4" type="video/mp4" />-->
@@ -11,7 +11,7 @@
   </div>
   <div class="product-container desktop-display">
     <div class="section intro">
-      <div class="heading">Close out faster</div>
+      <div class="heading">Can you afford another rejection or delay?</div>
 		<div class="content">
 			<p>Swift Projects puts the power to close wireless construction projects on the day of construction completion into the palm of your hand. Our system is all about capturing the details and emphasizing mobility and automation. Simply put, with Swift Projects, your company can move away from manual close out processes and into a near real time, semi-automated, mobile-first environment that helps you complete projects with accuracy and speed.
 			<p>
