--- a/css/_product.scss
+++ b/css/_product.scss
@@ -448,4 +448,35 @@
 }
 
 
+.contact-info {
+  margin-top: 1.4em;
+  color: #ddd;
+  letter-spacing: 0.05em;
+  text-align: center;
+  line-height: 1.5em;
+  span {
+    display: none;
+  }
+}
 
+.get-started {
+  padding: 12px 14px;
+  text-transform: uppercase;
+  margin: 0 auto;
+  width: 180px;
+  text-align: center;
+  font-size: 1.2em;
+  letter-spacing: 0.08em;
+  border-radius: 4px;
+  font-weight: 300;
+  cursor: pointer;
+  margin-top: 50px;
+  background: #444a50;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover {
+    background: rgba(68,74,80,0.85);
+  }
+}
