--- a/css/ontel.scss
+++ b/css/ontel.scss
@@ -747,9 +747,72 @@ ng-md-icon > svg {
   }
 
   footer {
+    background: #444A50;
+    padding: 2em;
+    color: #fff;
     .contain {
-      .dropdown {
-        display: none;
+      display: flex;
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+      font-size: 1.2em;
+      > div {
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        flex-wrap: wrap;
+      }
+      &:first-child {
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+        > div {
+          margin: 0em 1.5em;
+          &:first-child {
+            font-weight: bold;
+            letter-spacing: 0.1em;
+            font-size: 1.1em;
+            text-transform: uppercase;
+            margin-bottom: 1em;
+            justify-content: center;
+            div {
+              position: relative;
+              margin: 0em 0.9em;
+              cursor: pointer;
+              transition: 0.3s all ease;
+              &:hover:after {
+                opacity: 1;
+              }
+            }
+          }
+          &:last-child {
+            text-transform: uppercase;
+            font-size: 0.9em;
+            justify-content: center;
+            div {
+              cursor: pointer;
+              transition: 0.3s all ease;
+              align-self: center;
+              flex: 0 auto;
+              padding: 0.25em 1em;
+              &:hover {
+                opacity: 1;
+              }
+            }
+          }
+          div {
+            padding: 0.25em 0.45em;
+            flex: 0 0 auto;
+            min-width: 1px;
+          }
+        }
+      }
+      &:last-child {
+        justify-content: center;
+        flex-direction: row;
+        margin-top: 1.4em;
+        color: #ddd;
+        letter-spacing: 0.05em;
       }
     }
   }
@@ -836,15 +899,15 @@ ng-md-icon > svg {
     justify-content: center;
     //align-items: flex-start;
     &.plan {
-      background: linear-gradient(rgba(132, 228, 194, 0.7), rgba(96, 208, 156, 0.7)), url(../img/tower-landscape.jpg) no-repeat center center;
+      background: linear-gradient(rgba(117, 197, 169, 0.7), rgba(81, 183, 136, 0.7)), url(../img/tower-landscape.jpg) no-repeat center center;
       background-size: cover;
       .section-title, .heading .sub {
         color: #66eabc;
       }
       .cta {
-        background: #66eabc;
+        background: #61dcb0;
         &:hover {
-          background: rgba(#66eabc, 0.85)
+          background: rgba(#61dcb0, 0.85)
         }
       }
     }
@@ -1361,57 +1424,17 @@ ng-md-icon > svg {
       }
     }
   }
-  footer {
-    .contain {
-      .dropdown {
-        display: block;
-      }
+
+  footer .contain {
+    font-size: 1em;
+    &:first-child > div:last-child div:not(:last-child) {
+      border-right: 1px solid #fff;
     }
-    .contain {
-      > div {
-        display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        flex-wrap: wrap;
-      }
-      &:first-child {
-        > div {
-          //flex: 1 0 0;
-          &:first-child {
-            font-weight: bold;
-            letter-spacing: 0.1em;
-            font-size: 1.1em;
-            text-transform: uppercase;
-            margin-bottom: 1em;
-            justify-content: center;
-            div {
-              position: relative;
-              margin: 0em 0.9em;
-              cursor: pointer;
-              transition: 0.3s all ease;
-              padding: 0.25em 0.45em;
-              flex: 0 0 auto;
-              min-width: 1px;
-              &:after {
-                display: inherit;
-              }
-            }
-          }
-          &:last-child {
-            text-transform: uppercase;
-            font-size: 0.9em;
-            justify-content: center;
-          }
-          div {
-            flex: 1 0 0;
-          }
-        }
-      }
-      &:last-child {
-        margin-top: 2.4em;
-      }
+    > div {
+      flex-direction: row;
     }
   }
+
   .product-container .project-container .project > div:first-child.title > div:last-child {
     flex-direction: row;
   }
@@ -1523,7 +1546,7 @@ ng-md-icon > svg {
       > div {
         flex: 0;
         padding: 0.3em;
-        border-right: 1px solid #fff;
+        border-right: 1px solid rgba(255, 255, 255, 0.5);
       }
       &:last-child {
         > div {
