--- a/views/main.html
+++ b/views/main.html
@@ -4,8 +4,8 @@
         <div class="video-container" ng-class="{'video-active-shade': showVideo}">
             <div class="filter"></div>
             <video autoplay loop class="fillWidth" id="ontelbg">
-                <source src="img/motion/NYC-Traffic.mp4" type="video/mp4" />
-                <source src="img/motion/NYC-Traffic.webm" type="video/webm" />
+                <source src="img/motion/tower.mp4" type="video/mp4" />
+                <!--<source src="img/motion/NYC-Traffic.webm" type="video/webm" />-->
             </video>
             <div class="poster"></div>
         </div>
