Closeout and Swift updates

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -2,7 +2,7 @@
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header closeout">
     <div class="landing-text">close out Management</div>
-	<div class="landing-text-sub">Close out projects better</div>
+	<div class="landing-text-sub">Outsource your C.O.P.</div>
   </div>
   <div class="product-container">
     <div class="section intro">
