--- a/views/swift.html
+++ b/views/swift.html
@@ -2,7 +2,7 @@
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header swift">
     <div class="landing-text">Swift Projects™</div>
-    <div class="landing-text-sub">Close out better</div>
+    <div class="landing-text-sub">C.O.P. Software and Beyond</div>
     <!--<div class="video-container">-->
       <!--<video autoplay loop class="fillWidth" id="ontelbg">-->
         <!--<source src="https://s3.amazonaws.com/bcm-static/static/encoded/r2-1080p/winter_one.mp4" type="video/mp4" />-->
