--- a/views/closeout.html
+++ b/views/closeout.html
@@ -33,7 +33,7 @@
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our customers improve cash-flow by reducing costs and length of time to invoice acceptance</span>
+                  <span>Our customers improve cash-flow by reducing rejections and return visit costs, and by cutting the length of time to invoice acceptance</span>
                 </li>
               </ul>
             </div>
