--- a/views/swift.html
+++ b/views/swift.html
@@ -1,7 +1,7 @@
 <topnav></topnav>
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header swift">
-    <div class="landing-text">Swift Projects™</div>
+    <div class="landing-text">Swift Projects</div>
     <div class="landing-text-sub">C.O.P. Software and Beyond</div>
     <!--<div class="video-container">-->
       <!--<video autoplay loop class="fillWidth" id="ontelbg">-->
